--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ cmake_minimum_required(VERSION 2.6)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
                       ${PROJECT_SOURCE_DIR}/../../cmake/Modules)
 
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+
 if(NOT IFEM_CONFIGURED)
   find_package(IFEM REQUIRED)
   include_directories(${IFEM_INCLUDE_DIRS})
